# cpp-platformer-gameengine

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  README.md
_ROADMAP_/: 02_RENDERING_SYSTEM.md  03_PHYSICS_SYSTEM.md  04_ENTITY_SYSTEM.md  05_ENEMY_SYSTEM.md  06_POWERUP_SYSTEM.md  07_AUDIO_SYSTEM.md  08_GAME_STATES.md  09_ACHIEVEMENT_SYSTEM.md
_ROADMAP_/COMPLETED/: 01_CORE_ENGINE.md
include/core/: Engine.hpp  Input.hpp  Logger.hpp  Resource.hpp  ResourceManager.hpp  Timer.hpp  Window.hpp
include/graphics/: Mesh.hpp  Rectangle.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vertex.hpp
include/utils/: Debug.hpp
src/: main.cpp
src/core/: Engine.cpp  Input.cpp  Logger.cpp  ResourceManager.cpp  Timer.cpp  Window.cpp
src/graphics/: Mesh.cpp  Rectangle.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/utils/: Debug.cpp
tests/: CMakeLists.txt
tests/core/: InputTests.cpp  ResourceManagerTests.cpp  TestResource.hpp  TimerTests.cpp  WindowTests.cpp
tests/graphics/: MeshTests.cpp  RendererTests.cpp  TextureTests.cpp  VertexTests.cpp
